--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,6 +1,12 @@
 2003-12-08  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpimage.sgml
+	* libgimp/tmpl/gimplayer.sgml: follow layer mask API change.
+
+2003-12-08  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
 	* libgimp/tmpl/gimpimage.sgml: updated.
 
 2003-12-08  Sven Neumann  <sven@gimp.org>
