--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-08  Manish Singh  <yosh@gimp.org>
+
+	* Makefile.am
+	* configure.in: added --disable-devel-docs, to skip the devel-docs
+	dir entirely. Also, changed --enable-gimpdir to --with-gimpdir
+	since that semantic makes more sense.
+
 2003-12-08  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/image.pdb: marked gimp_image_add_layer_mask()
