2003-12-09  Michael Natterer  <mitch@gimp.org>
	* app/core/core-enums.h: export enum GimpRotationType to libgimp.

	* tools/pdbgen/pdb/image.pdb: added gimp_image_rotate() PDB wrapper.

	* app/pdb/image_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpenums.h
	* libgimp/gimpimage_pdb.[ch]
	* plug-ins/pygimp/gimpenums.py
	* plug-ins/script-fu/script-fu-constants.c
	* tools/pdbgen/enums.pl: regenerated.

2003-12-09  Michael Natterer  <mitch@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpenums.sgml
	* libgimp/tmpl/gimpimage.sgml: added gimp_image_rotate().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11734 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2003-12-09  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/core-enums.h: export enum GimpRotationType to libgimp.
+
+	* tools/pdbgen/pdb/image.pdb: added gimp_image_rotate() PDB wrapper.
+
+	* app/pdb/image_cmds.c
+	* app/pdb/internal_procs.c
+	* libgimp/gimpenums.h
+	* libgimp/gimpimage_pdb.[ch]
+	* plug-ins/pygimp/gimpenums.py
+	* plug-ins/script-fu/script-fu-constants.c
+	* tools/pdbgen/enums.pl: regenerated.
+
 2003-12-08  Manish Singh  <yosh@gimp.org>
 
 	* Makefile.am
