2003-12-09  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/image.pdb (image_list): iterate gimp->images
	directly rather than building a (leaked) temp GList using
	gimp_container_foreach(). Removed gimlist_cb() utility function.

	* app/pdb/image_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11735 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
+	* tools/pdbgen/pdb/image.pdb (image_list): iterate gimp->images
+	directly rather than building a (leaked) temp GList using
+	gimp_container_foreach(). Removed gimlist_cb() utility function.
+
+	* app/pdb/image_cmds.c: regenerated.
+
+2003-12-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/core-enums.h: export enum GimpRotationType to libgimp.
 
 	* tools/pdbgen/pdb/image.pdb: added gimp_image_rotate() PDB wrapper.
