2003-12-09  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/scripts/spyrogimp.scm: added missing parameter
	to gimp-gradients-get-gradient-data call.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11736 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-09  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/spyrogimp.scm: added missing parameter
+	to gimp-gradients-get-gradient-data call.
+
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/image.pdb (image_list): iterate gimp->images
