--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_drop_drawable): use
+	gimp_item_convert() instead of gimp_item_duplicate() to create
+	the layer for the new image. Cleanup.
+
+2003-12-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/base/tile-manager.c (tile_manager_get_memsize): return a
 	more exact result.
 
