2003-12-09  Michael Natterer  <mitch@gimp.org>
	* app/core/gimplayer-floating-sel.c (floating_sel_attach): changed
	absolutely unclear comment.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11740 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimplayer-floating-sel.c (floating_sel_attach): changed
+	absolutely unclear comment.
+
+2003-12-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_drop_drawable): use
 	gimp_item_convert() instead of gimp_item_duplicate() to create
 	the layer for the new image. Cleanup.
