--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpimage-scale.c (gimp_image_scale_check): renamed
+	variable and added comments to make the calculation clear.
+
+2003-12-09  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpimage-duplicate.c: Removed unused #includes. Copy
 	the colormap using the provided API. Use gimp_item_convert()
 	instead of gimp_item_duplicate() and gimp_item_set_image() to
