reverted Maurits' patch, to get rid of gimp_parameter_settings_new (see #125141)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11745 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-09  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/xpm.c (save_dialog): reverted Maurits' patch,
+	to get rid of gimp_parameter_settings_new (see #125141)
+
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-scale.c (gimp_image_scale_check): renamed
