--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-11  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2003-12-11  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by Xavier Beà <xbea@pie.xtec.es>.
