2003-12-11  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpdockable.c (gimp_dockable_init): suppress
	button_press events that reach the dockable widget but don't
	originate from the title area.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11756 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-11  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpdockable.c (gimp_dockable_init): suppress
+	button_press events that reach the dockable widget but don't
+	originate from the title area.
+
 2003-12-11  DindinX  <david@dindinx.org>
 
 	* libgimp/gimpmiscui.c:
