2003-12-12  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpcurvestool.c: use GimpHistogramOptions instead of
	GimpColorOptions and connect the options to the histogram view.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11758 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-12  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcurvestool.c: use GimpHistogramOptions instead of
+	GimpColorOptions and connect the options to the histogram view.
+
 2003-12-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimphistogramview.[ch]: added a hack that allows to
