--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-11  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/destripe.c (destripe_dialog): use the GtkDialog
+	vbox instead of an uninitialized one.
+
 2003-12-12  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcurvestool.c: use GimpHistogramOptions instead of
