--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpcurvestool.c (gimp_curves_tool_register): call
+	gimp_color_options_new, not gimp_histogram_options_new.
+
 2003-12-11  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/destripe.c (destripe_dialog): use the GtkDialog
