--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-12  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/dialogs.c: remember the size of the color picker dialog.
+
 2003-12-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpcurvestool.c (gimp_curves_tool_register): call
