2003-12-12  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpblendoptions.c (gimp_blend_options_gui)
	* app/tools/gimpcoloroptions.c (gimp_color_options_gui)
	* app/tools/gimpinkoptions.c (gimp_ink_options_gui): removed calls
	to gtk_frame_set_shadow_type (frame, GTK_SHADOW_ETCHED_IN) because
	that's the default anyway.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11762 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpblendoptions.c (gimp_blend_options_gui)
+	* app/tools/gimpcoloroptions.c (gimp_color_options_gui)
+	* app/tools/gimpinkoptions.c (gimp_ink_options_gui): removed calls
+	to gtk_frame_set_shadow_type (frame, GTK_SHADOW_ETCHED_IN) because
+	that's the default anyway.
+
 2003-12-12  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/dialogs.c: remember the size of the color picker dialog.
