2003-12-12  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimplayer.h: removed preserve_transparency #defines.
	This is the last of the #defines we added before 1.2 to create a
	saner libgimp API (this time, removed the function names that were
	planned to be the new ones, because this one is just nitpicky and
	overly long).

	* libgimp/gimpcompat.h: added them here.

	* plug-ins/common/iwarp.c
	* plug-ins/common/psd.c
	* plug-ins/common/psd_save.c
	* plug-ins/common/psp.c
	* plug-ins/common/rotate.c
	* plug-ins/common/threshold_alpha.c
	* plug-ins/common/vpropagate.c
	* plug-ins/xjt/xjt.c: changed accordingly.

2003-12-12  Michael Natterer  <mitch@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimplayer.sgml: follow preserve_transparency removal.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11764 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-12  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimplayer.sgml: follow preserve_transparency removal.
+
 2003-12-09  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
