--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,24 @@
 2003-12-12  Michael Natterer  <mitch@gimp.org>
 
+	* libgimp/gimplayer.h: removed preserve_transparency #defines.
+	This is the last of the #defines we added before 1.2 to create a
+	saner libgimp API (this time, removed the function names that were
+	planned to be the new ones, because this one is just nitpicky and
+	overly long).
+
+	* libgimp/gimpcompat.h: added them here.
+
+	* plug-ins/common/iwarp.c
+	* plug-ins/common/psd.c
+	* plug-ins/common/psd_save.c
+	* plug-ins/common/psp.c
+	* plug-ins/common/rotate.c
+	* plug-ins/common/threshold_alpha.c
+	* plug-ins/common/vpropagate.c
+	* plug-ins/xjt/xjt.c: changed accordingly.
+
+2003-12-12  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/FractalExplorer/Dialogs.c
 	* plug-ins/fp/fp_gtk.c
 	* plug-ins/gfig/gfig-preview.c
@@ -44,7 +63,6 @@
 	* app/widgets/gimphistogramview.[ch]: added a hack that allows to
 	render the histogram in a brighter color. Fixed initial range for
 	views that are not selectable.
-
 	* app/tools/gimpcurvestool.[ch]: replaced the GtkDrawingArea by a
 	bright GimpHistogramView and render the curves tool controls on
 	top of the histogram. Fixes bug #71633.
