Fixed the header part to reflect the new name of these files.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11770 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-13  DindinX  <david@dindinx.org>
+
+	* plug-ins/libgimpoldpreview/gimpoldpreview.[ch]: fixed the header
+	part to reflect the new name of these files.
+
 2003-12-12  Manish Singh  <yosh@gimp.org>
 
 	* Makefile.am
