fixed a typo in the ChangeLog
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11771 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1236,7 +1236,7 @@
 2003-11-29  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpguiconfig.c: set the default window type hint for
-	dockables to Normal.
+	docks to Normal.
 
 	* plug-ins/sel2path/sel2path_adv_dialog.c: set the number of
 	digits to the same value for all spinbuttons.
