--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-14  Raphaël Quinet  <quinet@gamers.org>
+
+	* libgimp/gimpui.h: Removed inclusion of libgimp/gimpmiscui.h,
+	which is gone now.  Looks like another forgotten commit.  It was
+	breaking the build (ouch! bad DindinX!).  ;-)
+
 2003-12-14  DindinX  <david@dindinx.org>
 
 	* plug-ins/FractalExplorer/Dialogs.c:
