2003-12-14  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpui.def: removed gimp_plug_in_get_path.

	* plug-ins/Lighting/lighting_apply.c
	* plug-ins/Lighting/lighting_preview.[ch]: minor cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11776 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-12-14  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpui.def: removed gimp_plug_in_get_path.
+
+	* plug-ins/Lighting/lighting_apply.c
+	* plug-ins/Lighting/lighting_preview.[ch]: minor cleanup.
+
+2003-12-14  Sven Neumann  <sven@gimp.org>
+
 	* libgimpthumb/gimpthumb-error.c
 	* libgimpthumb/gimpthumb-utils.[ch]
 	* libgimpthumb/gimpthumbnail.c: some code review and addition of
@@ -71,30 +78,31 @@
 	 usage, so The Gimp should now build with msvc without patching it.
 	]
 
-	* app/makefile.msc app/text/makefile.msc : use $(PANGOFT2_CFLAGS) etc.
+	* app/makefile.msc app/text/makefile.msc: use $(PANGOFT2_CFLAGS) etc.
 
-	* libgimpthumb/makefile.msc : (new file)
-	* makefile.msc : added libgimpthumb
+	* libgimpthumb/makefile.msc: (new file)
+	* makefile.msc: added libgimpthumb
 
-	* libgimpthumb/gimpthumbnail.c : include gimpwin32-io.h
-	* libgimpthumb/gimpthumb-utils.c : don't compare size pointer
+	* libgimpthumb/gimpthumbnail.c: include gimpwin32-io.h
+	* libgimpthumb/gimpthumb-utils.c: don't compare size pointer
 	with GIMP_THUMB_SIZE_FAIL but *size 
 
-	* plug-ins/makefile.msc : handle libgimpoldpreview
+	* plug-ins/makefile.msc: handle libgimpoldpreview
 
-	* plug-ins/common/decompose.c : define cbrt() if not __GLIBC__
+	* plug-ins/common/decompose.c: define cbrt() if not __GLIBC__
 
-	* plug-ins/common/winclipboard.c : make it compile without gimpcompat.h
+	* plug-ins/common/winclipboard.c: make it compile without gimpcompat.h
 
-	* plug-ins/imagemap/imagemap_csim_lex.c : its a generated file
+	* plug-ins/imagemap/imagemap_csim_lex.c: its a generated file
 	but still win32/msvc has no unistd.h
 
-	* plug-ins/pygimp/makefile.msc : (new file) to use the binary you 
+	* plug-ins/pygimp/makefile.msc: (new file) to use the binary you 
 	need to patch glib, see bug #98737
 
-	* plug-ins/libgimpoldpreview.c : use <libgimp/gimp.h> instead of "gimp.h"
+	* plug-ins/libgimpoldpreview.c: use <libgimp/gimp.h> instead of
+	"gimp.h"
 
-	* **/Makefile.am : added makefile.msc to EXTRA_DIST
+	* **/Makefile.am: added makefile.msc to EXTRA_DIST
 
 2003-12-12  Michael Natterer  <mitch@gimp.org>
 
